--- a/source/templates/pages/index.html
+++ b/source/templates/pages/index.html
@@ -4,4 +4,14 @@ title: Главная страница
 name: index
 ---
 
+<div class="svg-outlink-logo svg-outlink-logo-dims"></div>
 
+<div class="svg-scanning svg-scanning-dims"></div>
+
+<div class="svg-check-site svg-check-site-dims"></div>
+
+<div class="svg-out-link svg-out-link-dims"></div>
+
+<div class="svg-pay-free svg-pay-free-dims"></div>
+
+<div class="svg-postman svg-postman-dims"></div>
