--- a/source/stylesheets/sprites/sprites.less
+++ b/source/stylesheets/sprites/sprites.less
@@ -11,11 +11,297 @@ The large array-like variables contain all information about a single icon
 At the bottom of this section, we provide information about the spritesheet itself
 @spritesheet: width height image @spritesheet-sprites;
 */
-@spritesheet-width: 0px;
-@spritesheet-height: 0px;
+@calendar-name: calendar;
+@calendar-x: 182px;
+@calendar-y: 135px;
+@calendar-offset-x: -182px;
+@calendar-offset-y: -135px;
+@calendar-width: 19px;
+@calendar-height: 20px;
+@calendar-total-width: 279px;
+@calendar-total-height: 182px;
+@calendar-image: '../images/sprites/sprite.png';
+@calendar: 182px 135px -182px -135px 19px 20px 279px 182px '../images/sprites/sprite.png' calendar;
+@clock-name: clock;
+@clock-x: 93px;
+@clock-y: 135px;
+@clock-offset-x: -93px;
+@clock-offset-y: -135px;
+@clock-width: 20px;
+@clock-height: 20px;
+@clock-total-width: 279px;
+@clock-total-height: 182px;
+@clock-image: '../images/sprites/sprite.png';
+@clock: 93px 135px -93px -135px 20px 20px 279px 182px '../images/sprites/sprite.png' clock;
+@element-1-name: element-1;
+@element-1-x: 236px;
+@element-1-y: 135px;
+@element-1-offset-x: -236px;
+@element-1-offset-y: -135px;
+@element-1-width: 14px;
+@element-1-height: 14px;
+@element-1-total-width: 279px;
+@element-1-total-height: 182px;
+@element-1-image: '../images/sprites/sprite.png';
+@element-1: 236px 135px -236px -135px 14px 14px 279px 182px '../images/sprites/sprite.png' element-1;
+@element-10-name: element-10;
+@element-10-x: 32px;
+@element-10-y: 135px;
+@element-10-offset-x: -32px;
+@element-10-offset-y: -135px;
+@element-10-width: 21px;
+@element-10-height: 21px;
+@element-10-total-width: 279px;
+@element-10-total-height: 182px;
+@element-10-image: '../images/sprites/sprite.png';
+@element-10: 32px 135px -32px -135px 21px 21px 279px 182px '../images/sprites/sprite.png' element-10;
+@element-11-name: element-11;
+@element-11-x: 175px;
+@element-11-y: 102px;
+@element-11-offset-x: -175px;
+@element-11-offset-y: -102px;
+@element-11-width: 12px;
+@element-11-height: 11px;
+@element-11-total-width: 279px;
+@element-11-total-height: 182px;
+@element-11-image: '../images/sprites/sprite.png';
+@element-11: 175px 102px -175px -102px 12px 11px 279px 182px '../images/sprites/sprite.png' element-11;
+@element-12-name: element-12;
+@element-12-x: 260px;
+@element-12-y: 135px;
+@element-12-offset-x: -260px;
+@element-12-offset-y: -135px;
+@element-12-width: 12px;
+@element-12-height: 13px;
+@element-12-total-width: 279px;
+@element-12-total-height: 182px;
+@element-12-image: '../images/sprites/sprite.png';
+@element-12: 260px 135px -260px -135px 12px 13px 279px 182px '../images/sprites/sprite.png' element-12;
+@element-13-name: element-13;
+@element-13-x: 0px;
+@element-13-y: 102px;
+@element-13-offset-x: 0px;
+@element-13-offset-y: -102px;
+@element-13-width: 23px;
+@element-13-height: 23px;
+@element-13-total-width: 279px;
+@element-13-total-height: 182px;
+@element-13-image: '../images/sprites/sprite.png';
+@element-13: 0px 102px 0px -102px 23px 23px 279px 182px '../images/sprites/sprite.png' element-13;
+@element-14-name: element-14;
+@element-14-x: 126px;
+@element-14-y: 102px;
+@element-14-offset-x: -126px;
+@element-14-offset-y: -102px;
+@element-14-width: 17px;
+@element-14-height: 11px;
+@element-14-total-width: 279px;
+@element-14-total-height: 182px;
+@element-14-image: '../images/sprites/sprite.png';
+@element-14: 126px 102px -126px -102px 17px 11px 279px 182px '../images/sprites/sprite.png' element-14;
+@element-15-name: element-15;
+@element-15-x: 251px;
+@element-15-y: 42px;
+@element-15-offset-x: -251px;
+@element-15-offset-y: -42px;
+@element-15-width: 25px;
+@element-15-height: 21px;
+@element-15-total-width: 279px;
+@element-15-total-height: 182px;
+@element-15-image: '../images/sprites/sprite.png';
+@element-15: 251px 42px -251px -42px 25px 21px 279px 182px '../images/sprites/sprite.png' element-15;
+@element-16-name: element-16;
+@element-16-x: 0px;
+@element-16-y: 135px;
+@element-16-offset-x: 0px;
+@element-16-offset-y: -135px;
+@element-16-width: 22px;
+@element-16-height: 21px;
+@element-16-total-width: 279px;
+@element-16-total-height: 182px;
+@element-16-image: '../images/sprites/sprite.png';
+@element-16: 0px 135px 0px -135px 22px 21px 279px 182px '../images/sprites/sprite.png' element-16;
+@element-17-name: element-17;
+@element-17-x: 152px;
+@element-17-y: 42px;
+@element-17-offset-x: -152px;
+@element-17-offset-y: -42px;
+@element-17-width: 47px;
+@element-17-height: 24px;
+@element-17-total-width: 279px;
+@element-17-total-height: 182px;
+@element-17-image: '../images/sprites/sprite.png';
+@element-17: 152px 42px -152px -42px 47px 24px 279px 182px '../images/sprites/sprite.png' element-17;
+@element-18-name: element-18;
+@element-18-x: 211px;
+@element-18-y: 135px;
+@element-18-offset-x: -211px;
+@element-18-offset-y: -135px;
+@element-18-width: 15px;
+@element-18-height: 17px;
+@element-18-total-width: 279px;
+@element-18-total-height: 182px;
+@element-18-image: '../images/sprites/sprite.png';
+@element-18: 211px 135px -211px -135px 15px 17px 279px 182px '../images/sprites/sprite.png' element-18;
+@element-19-name: element-19;
+@element-19-x: 219px;
+@element-19-y: 102px;
+@element-19-offset-x: -219px;
+@element-19-offset-y: -102px;
+@element-19-width: 11px;
+@element-19-height: 11px;
+@element-19-total-width: 279px;
+@element-19-total-height: 182px;
+@element-19-image: '../images/sprites/sprite.png';
+@element-19: 219px 102px -219px -102px 11px 11px 279px 182px '../images/sprites/sprite.png' element-19;
+@element-2-name: element-2;
+@element-2-x: 197px;
+@element-2-y: 102px;
+@element-2-offset-x: -197px;
+@element-2-offset-y: -102px;
+@element-2-width: 12px;
+@element-2-height: 11px;
+@element-2-total-width: 279px;
+@element-2-total-height: 182px;
+@element-2-image: '../images/sprites/sprite.png';
+@element-2: 197px 102px -197px -102px 12px 11px 279px 182px '../images/sprites/sprite.png' element-2;
+@element-3-name: element-3;
+@element-3-x: 68px;
+@element-3-y: 102px;
+@element-3-offset-x: -68px;
+@element-3-offset-y: -102px;
+@element-3-width: 17px;
+@element-3-height: 17px;
+@element-3-total-width: 279px;
+@element-3-total-height: 182px;
+@element-3-image: '../images/sprites/sprite.png';
+@element-3: 68px 102px -68px -102px 17px 17px 279px 182px '../images/sprites/sprite.png' element-3;
+@element-4-name: element-4;
+@element-4-x: 33px;
+@element-4-y: 102px;
+@element-4-offset-x: -33px;
+@element-4-offset-y: -102px;
+@element-4-width: 25px;
+@element-4-height: 19px;
+@element-4-total-width: 279px;
+@element-4-total-height: 182px;
+@element-4-image: '../images/sprites/sprite.png';
+@element-4: 33px 102px -33px -102px 25px 19px 279px 182px '../images/sprites/sprite.png' element-4;
+@element-5-name: element-5;
+@element-5-x: 209px;
+@element-5-y: 42px;
+@element-5-offset-x: -209px;
+@element-5-offset-y: -42px;
+@element-5-width: 32px;
+@element-5-height: 22px;
+@element-5-total-width: 279px;
+@element-5-total-height: 182px;
+@element-5-image: '../images/sprites/sprite.png';
+@element-5: 209px 42px -209px -42px 32px 22px 279px 182px '../images/sprites/sprite.png' element-5;
+@element-6-name: element-6;
+@element-6-x: 153px;
+@element-6-y: 135px;
+@element-6-offset-x: -153px;
+@element-6-offset-y: -135px;
+@element-6-width: 19px;
+@element-6-height: 20px;
+@element-6-total-width: 279px;
+@element-6-total-height: 182px;
+@element-6-image: '../images/sprites/sprite.png';
+@element-6: 153px 135px -153px -135px 19px 20px 279px 182px '../images/sprites/sprite.png' element-6;
+@element-7-name: element-7;
+@element-7-x: 0px;
+@element-7-y: 166px;
+@element-7-offset-x: 0px;
+@element-7-offset-y: -166px;
+@element-7-width: 8px;
+@element-7-height: 16px;
+@element-7-total-width: 279px;
+@element-7-total-height: 182px;
+@element-7-image: '../images/sprites/sprite.png';
+@element-7: 0px 166px 0px -166px 8px 16px 279px 182px '../images/sprites/sprite.png' element-7;
+@element-8-name: element-8;
+@element-8-x: 153px;
+@element-8-y: 102px;
+@element-8-offset-x: -153px;
+@element-8-offset-y: -102px;
+@element-8-width: 12px;
+@element-8-height: 11px;
+@element-8-total-width: 279px;
+@element-8-total-height: 182px;
+@element-8-image: '../images/sprites/sprite.png';
+@element-8: 153px 102px -153px -102px 12px 11px 279px 182px '../images/sprites/sprite.png' element-8;
+@element-9-name: element-9;
+@element-9-x: 95px;
+@element-9-y: 102px;
+@element-9-offset-x: -95px;
+@element-9-offset-y: -102px;
+@element-9-width: 21px;
+@element-9-height: 13px;
+@element-9-total-width: 279px;
+@element-9-total-height: 182px;
+@element-9-image: '../images/sprites/sprite.png';
+@element-9: 95px 102px -95px -102px 21px 13px 279px 182px '../images/sprites/sprite.png' element-9;
+@help-name: help;
+@help-x: 123px;
+@help-y: 135px;
+@help-offset-x: -123px;
+@help-offset-y: -135px;
+@help-width: 20px;
+@help-height: 20px;
+@help-total-width: 279px;
+@help-total-height: 182px;
+@help-image: '../images/sprites/sprite.png';
+@help: 123px 135px -123px -135px 20px 20px 279px 182px '../images/sprites/sprite.png' help;
+@info-name: info;
+@info-x: 63px;
+@info-y: 135px;
+@info-offset-x: -63px;
+@info-offset-y: -135px;
+@info-width: 20px;
+@info-height: 20px;
+@info-total-width: 279px;
+@info-total-height: 182px;
+@info-image: '../images/sprites/sprite.png';
+@info: 63px 135px -63px -135px 20px 20px 279px 182px '../images/sprites/sprite.png' info;
+@outlink-logo-name: outlink-logo;
+@outlink-logo-x: 101px;
+@outlink-logo-y: 0px;
+@outlink-logo-offset-x: -101px;
+@outlink-logo-offset-y: 0px;
+@outlink-logo-width: 178px;
+@outlink-logo-height: 32px;
+@outlink-logo-total-width: 279px;
+@outlink-logo-total-height: 182px;
+@outlink-logo-image: '../images/sprites/sprite.png';
+@outlink-logo: 101px 0px -101px 0px 178px 32px 279px 182px '../images/sprites/sprite.png' outlink-logo;
+@pages-name: pages;
+@pages-x: 0px;
+@pages-y: 0px;
+@pages-offset-x: 0px;
+@pages-offset-y: 0px;
+@pages-width: 91px;
+@pages-height: 92px;
+@pages-total-width: 279px;
+@pages-total-height: 182px;
+@pages-image: '../images/sprites/sprite.png';
+@pages: 0px 0px 0px 0px 91px 92px 279px 182px '../images/sprites/sprite.png' pages;
+@spacebox-logo-name: spacebox-logo;
+@spacebox-logo-x: 101px;
+@spacebox-logo-y: 42px;
+@spacebox-logo-offset-x: -101px;
+@spacebox-logo-offset-y: -42px;
+@spacebox-logo-width: 41px;
+@spacebox-logo-height: 40px;
+@spacebox-logo-total-width: 279px;
+@spacebox-logo-total-height: 182px;
+@spacebox-logo-image: '../images/sprites/sprite.png';
+@spacebox-logo: 101px 42px -101px -42px 41px 40px 279px 182px '../images/sprites/sprite.png' spacebox-logo;
+@spritesheet-width: 279px;
+@spritesheet-height: 182px;
 @spritesheet-image: '../images/sprites/sprite.png';
-@spritesheet-sprites:;
-@spritesheet: 0px 0px '../images/sprites/sprite.png' @spritesheet-sprites;
+@spritesheet-sprites: @calendar @clock @element-1 @element-10 @element-11 @element-12 @element-13 @element-14 @element-15 @element-16 @element-17 @element-18 @element-19 @element-2 @element-3 @element-4 @element-5 @element-6 @element-7 @element-8 @element-9 @help @info @outlink-logo @pages @spacebox-logo;
+@spritesheet: 279px 182px '../images/sprites/sprite.png' @spritesheet-sprites;
 
 /*
 The provided classes are intended to be used with the array-like variables
