--- a/source/templates/layouts/default.html
+++ b/source/templates/layouts/default.html
@@ -9,6 +9,7 @@
 		</title>
 
 		<link rel="stylesheet" href="stylesheets/app.min.css" />
+		<link rel="stylesheet" href="stylesheets/svg-sprites/css/sprite.css" />
 
 		<!--[if lt IE 9]>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/{{ bower.dependencies.html5shiv }}/html5shiv.min.js"></script>
