Begin create index-page

--- a/source/stylesheets/pages/_typo.less
+++ b/source/stylesheets/pages/_typo.less
@@ -20,15 +20,15 @@
     &-rouble {
         font-family: 'als_rublregular';
     }
-    &-trebuchet {
-        font-family: "Trebuchet MS", Helvetica, sans-serif;
+    &-arial {
+        font-family: Arial, "Trebuchet MS", Helvetica, sans-serif;
     }
 }
 
 body {
-	&:extend(.font-trebuchet);
+	&:extend(.font-arial);
 	position: relative;
-    color: @base-color;
+    color: white;
 }
 b,strong {
 	font-weight: normal;
