--- a/source/templates/pages/index.html
+++ b/source/templates/pages/index.html
@@ -4,14 +4,23 @@ title: Главная страница
 name: index
 ---
 
-<div class="svg-outlink-logo svg-outlink-logo-dims"></div>
-
-<div class="svg-scanning svg-scanning-dims"></div>
-
-<div class="svg-check-site svg-check-site-dims"></div>
-
-<div class="svg-out-link svg-out-link-dims"></div>
-
-<div class="svg-pay-free svg-pay-free-dims"></div>
-
-<div class="svg-postman svg-postman-dims"></div>
+<div class="row">
+	<div class="col-xs-8">
+		<div class="svg-outlink-logo svg-outlink-logo-dims"></div>
+	</div>
+	<div class="col-xs-8">
+		<div class="svg-scanning svg-scanning-dims"></div>
+	</div>
+	<div class="col-xs-8">
+		<div class="svg-check-site svg-check-site-dims"></div>
+	</div>
+	<div class="col-xs-8">
+		<div class="svg-out-link svg-out-link-dims"></div>
+	</div>
+	<div class="col-xs-8">
+		<div class="svg-pay-free svg-pay-free-dims"></div>
+	</div>
+	<div class="col-xs-8">
+		<div class="svg-postman svg-postman-dims"></div>
+	</div>
+</div>
