--- a/source/stylesheets/pages/main/main.less
+++ b/source/stylesheets/pages/main/main.less
@@ -1,4 +1,45 @@
 
-body {
+
+
+.page {
 	background: @base-color;
+	border-width: 20px 20px;
+	border-style: solid;
+	border-color: #fff;
+	position: relative;
+	&:before,
+	&:after {
+		content: "";
+		display: inline-block;
+		height: 100%;
+		position: absolute;
+		top: 0px;
+		right: 0px;
+		bottom: 0px;
+		left: 0px;		
+	}
+	&:before {
+		background: transparent url(../images/bg-horizontal.png) repeat 50% 50px;
+	}
+	&:after {
+		background: transparent url(../images/bg-vertical.png) repeat 50% 50px;
+	}
+	&__bg {
+		position: absolute;
+		height: 50%;
+		left: 0px;
+		right: 0px;
+		&:nth-child(1) {
+			background-image: linear-gradient(180deg, rgba(109,186,199,0.1), rgba(109,186,199,0.1));
+			top: 0px;
+		}
+		&:nth-child(2) {
+			background-image: linear-gradient(180deg, rgba(109,186,199,0.1), rgba(109,186,199,0.7));
+			bottom: 0px;
+		}
+	}
+	&__content {
+		position: relative;
+		z-index: 1;
+	}
 }
