Create index page

--- a/source/stylesheets/pages/_icons.less
+++ b/source/stylesheets/pages/_icons.less
@@ -12,12 +12,160 @@
 		z-index: 100;
 	}
 	
-	/*
-	&--house {
+	&--outlink-logo {
 		&:after {
-			.sprite(@house);
+			.sprite(@outlink-logo);
 		}
 	}
-	*/
+	
+	&--spacebox-logo {
+		&:after {
+			.sprite(@spacebox-logo);
+		}
+	}
+	
+	&--pages {
+		&:after {
+			.sprite(@pages);
+		}
+	}
+	
+	&--help {
+		&:after {
+			.sprite(@help);
+		}
+	}
+	
+	&--info {
+		&:after {
+			.sprite(@info);
+		}
+	}
+	
+	&--calendar {
+		&:after {
+			.sprite(@calendar);
+		}
+	}
+	
+	&--clock {
+		&:after {
+			.sprite(@clock);
+		}
+	}
+	
+	&--element-1 {
+		&:after {
+			.sprite(@element-1);
+		}
+	}
+	
+	&--element-2 {
+		&:after {
+			.sprite(@element-2);
+		}
+	}
+	
+	&--element-3 {
+		&:after {
+			.sprite(@element-3);
+		}
+	}
+	
+	&--element-4 {
+		&:after {
+			.sprite(@element-4);
+		}
+	}
+	
+	&--element-5 {
+		&:after {
+			.sprite(@element-5);
+		}
+	}
+	
+	&--element-6 {
+		&:after {
+			.sprite(@element-6);
+		}
+	}
+	
+	&--element-7 {
+		&:after {
+			.sprite(@element-7);
+		}
+	}
+	
+	&--element-8 {
+		&:after {
+			.sprite(@element-8);
+		}
+	}
+	
+	&--element-9 {
+		&:after {
+			.sprite(@element-9);
+		}
+	}
+	
+	&--element-10 {
+		&:after {
+			.sprite(@element-10);
+		}
+	}
+	
+	&--element-11 {
+		&:after {
+			.sprite(@element-11);
+		}
+	}
+	
+	&--element-12 {
+		&:after {
+			.sprite(@element-12);
+		}
+	}
+	
+	&--element-13 {
+		&:after {
+			.sprite(@element-13);
+		}
+	}
+	
+	&--element-14 {
+		&:after {
+			.sprite(@element-14);
+		}
+	}
+	
+	&--element-15 {
+		&:after {
+			.sprite(@element-15);
+		}
+	}
+	
+	&--element-16 {
+		&:after {
+			.sprite(@element-16);
+		}
+	}
+	
+	&--element-17 {
+		&:after {
+			.sprite(@element-17);
+		}
+	}
+	
+	&--element-18 {
+		&:after {
+			.sprite(@element-18);
+		}
+	}
+	
+	&--element-19 {
+		&:after {
+			.sprite(@element-19);
+		}
+	}
 	
 }
