--- a/source/stylesheets/pages/_typo.less
+++ b/source/stylesheets/pages/_typo.less
@@ -26,9 +26,14 @@
 }
 
 body {
-	&:extend(.font-arial);
 	position: relative;
     color: white;
+}
+body,
+input,
+td,
+th {
+	font-family: Arial, "Trebuchet MS", Helvetica, sans-serif;
 }
 b,strong {
 	font-weight: normal;
@@ -74,9 +79,6 @@ html {
 }
 body {
 	min-height: 100%;
-}
-a {
-	/*color: #24649f;*/
 }
 p {
 	margin: 0px 0px 20px;
