--- a/source/stylesheets/pages/_variables.less
+++ b/source/stylesheets/pages/_variables.less
@@ -2,9 +2,22 @@
    ========================================================================== */
 
 @base-color:          #1c6c88;
+@pink-color:          #ff2b5a;
+@pink-color-border:   #d9254d;
+@violet-color:        #7749c7;
+@violet-color-border: #653ea9;
+@green-bg:            #6dbac7;
+@text-white:          #fff;
+@text-grey:           #678;
+@text-light-grey:     #789;
+
+@text-green:          #39a;
+@text-light-green:    #79d8e1;
+@text-toolight-green: #9bf1f9;
+
+@text-input-color:    #112233;
 
 @footer-color:        #1d748c;
-
 
 /* 5 Columns Maket
    ========================================================================== */
