--- a/source/templates/layouts/default-guideline.html
+++ b/source/templates/layouts/default-guideline.html
@@ -19,20 +19,12 @@
 
 	</head>
 	<body>
-		<span class="page__bg"></span><span class="page__bg"></span>
-		<div class="page page--dark"><div class="page__content">
-			{{> header }}
-			
-			<div class="container">
 
-				{{> body }}
-			
-			</div>
+		<div class="content">
 
-		</div>
-		{{> footer }}
-		</div>
+			{{> body }}
 		
-		{{> footer-js }}
+		</div>
+
 	</body>
 </html>
