--- a/source/templates/partials/footer.html
+++ b/source/templates/partials/footer.html
@@ -10,6 +10,19 @@
 		</div>
 		<div class="col-xs-24">
 			
+			<div class="media pull-right">
+				<div class="media-left">
+					<i class="icons icons--spacebox-logo"></i>
+				</div>
+				<div class="media-body width-auto">
+					<p>
+						Разработка сайта
+						<br />
+						<a href="http://www.spacebox.ru/"><span class="decorate">Spacebox</span></a>
+					</p>
+				</div>
+			</div>
+			
 		</div>
 	</div>
 </footer>
