--- a/source/stylesheets/app.less
+++ b/source/stylesheets/app.less
@@ -7,12 +7,12 @@
 //** Number of columns in the grid.
 @grid-columns:              48;
 //** Padding between columns. Gets divided in half for the left and right.
-@grid-gutter-width:         0px;
+@grid-gutter-width:         30px;
 
-@font-size-base:            16px;
-// @line-height-base:        1.78571428571; // 25/14
+@font-size-base:            14px;
+// @line-height-base:       1.78571428571; // 25/14
 
-@container-large-desktop:      (960px + @grid-gutter-width);
+@container-large-desktop:   (1180px + @grid-gutter-width);
 
 
 /* *************************** [/Variables] ****************************** */
@@ -25,7 +25,7 @@
 @import "../../bower_components/bootstrap/less/glyphicons.less";
 
 // Core CSS
-//@import "../../bower_components/bootstrap/less/scaffolding.less";
+@import "../../bower_components/bootstrap/less/scaffolding.less";
 @import "../../bower_components/bootstrap/less/type.less";
 @import "../../bower_components/bootstrap/less/code.less";
 @import "../../bower_components/bootstrap/less/grid.less";
@@ -49,7 +49,7 @@
 @import "../../bower_components/bootstrap/less/thumbnails.less";
 // @import "../../bower_components/bootstrap/less/alerts.less";
 // @import "../../bower_components/bootstrap/less/progress-bars.less";
-// @import "../../bower_components/bootstrap/less/media.less";
+@import "../../bower_components/bootstrap/less/media.less";
 // @import "../../bower_components/bootstrap/less/list-group.less";
 // @import "../../bower_components/bootstrap/less/panels.less";
 @import "../../bower_components/bootstrap/less/responsive-embed.less";
@@ -80,6 +80,7 @@
 @import "pages/header/header";
 
 @import "pages/main/main";
+@import "pages/page/page";
 
 @import "pages/_forms";
 
