--- a/source/stylesheets/pages/footer/footer.less
+++ b/source/stylesheets/pages/footer/footer.less
@@ -5,6 +5,21 @@
 	left: 0px;
 	right: 0px;
 	bottom: 0px;
-	padding: 10px 0px;
+	padding: 22px 50px;
+	line-height: 1.7;
 	z-index: 10;
+	p {
+		margin-bottom: 0px;
+	}
+	a {
+		.decorate {
+			border-bottom: 1px solid;
+		}
+		&:hover {
+			text-decoration: none;
+			.decorate {
+				border-bottom-color: transparent;
+			}
+		}
+	}
 }
