--- a/source/stylesheets/pages/main/main.less
+++ b/source/stylesheets/pages/main/main.less
@@ -1,45 +1,163 @@
 
-
-
-.page {
-	background: @base-color;
-	border-width: 20px 20px;
-	border-style: solid;
-	border-color: #fff;
-	position: relative;
-	&:before,
-	&:after {
-		content: "";
-		display: inline-block;
-		height: 100%;
-		position: absolute;
-		top: 0px;
-		right: 0px;
-		bottom: 0px;
-		left: 0px;		
-	}
-	&:before {
-		background: transparent url(../images/bg-horizontal.png) repeat 50% 50px;
-	}
-	&:after {
-		background: transparent url(../images/bg-vertical.png) repeat 50% 50px;
-	}
-	&__bg {
-		position: absolute;
-		height: 50%;
-		left: 0px;
-		right: 0px;
-		&:nth-child(1) {
-			background-image: linear-gradient(180deg, rgba(109,186,199,0.1), rgba(109,186,199,0.1));
-			top: 0px;
+.services {
+	background: transparent url(../images/chart-bg.png) no-repeat 55% 0%;
+	padding-top: 0px;
+	&__item {
+		text-align: center;
+		color: @text-toolight-green;
+		font-size: 13px;
+		&-title {
+			font-size: 18px;
+			font-weight: 700;
+			line-height: 1.35;
+			color: @text-white;
+			margin-bottom: 17px;
 		}
-		&:nth-child(2) {
-			background-image: linear-gradient(180deg, rgba(109,186,199,0.1), rgba(109,186,199,0.7));
-			bottom: 0px;
+		&-content {
+			line-height: 1.55;
 		}
+		&-title,
+		&-content {
+			max-width: 260px;
+			margin-left: auto;
+			margin-right: auto;
+		}
+	}
+	.svg-scanning {
+		background: url("../images/svg-sprites/scanning.svg") no-repeat 50% 50%;
+		background-size: contain;
+		width: 100%;
+		height: 185px;
+	}
+	.svg-check-site {
+		background: url("../images/svg-sprites/check-site.svg") no-repeat 100% 100%;
+		background-size: contain;
+		width: 100%;
+		height: 170px;
+	}
+	.svg-out-link {
+		background: url("../images/svg-sprites/out-link.svg") no-repeat 45% 8px;
+		background-size: contain;
+		width: 100%;
+		height: 170px;
+	}
+	.svg-pay-free {
+		background: url("../images/svg-sprites/pay-free.svg") no-repeat 50% 100%;
+		background-size: contain;
+		width: 100%;
+		height: 170px;
+	}
+}
+
+.popup {
+	min-width: 680px;
+	padding: 0px 40px 25px;
+	.svg-postman {
+		background: url("../images/svg-sprites/postman.svg") no-repeat 50% 100%;
+		background-size: contain;
+		position: relative;
+		width: 100%;
+		max-width: 280px;
+		height: 290px;
+		margin: 0px auto 25px;
+	}
+	.form-control {
+		background-color: #fffbe1;
+		border-width: 1px 0px 1px 1px;
+		border-style: solid;
+		border-color: #d7d7d7;
+	}
+	&__title {
+		font-size: 40px;
+		line-height: 1.1;
+		font-weight: 700;
+		color: #345;
+		text-align: center;
+		margin-bottom: 27px;
 	}
 	&__content {
-		position: relative;
-		z-index: 1;
+		font-size: 18px;
+		line-height: 1.1;
+		color: #345;
+		text-align: center;
+		margin-bottom: 36px;
+	}
+	&__form {
+		max-width: 510px;
+		margin-left: auto;
+		margin-right: auto;
+	}
+	&__comment {
+		background-color: #c7f7ff;
+		position: absolute;
+		right: -140px;
+		width: 160px;
+		height: 140px;
+		line-height: 140px;
+		border-radius: 50%;
+		font-size: #567;
+		font-size: 12px;
+		font-style: italic;
+		text-align: center;
+		.valign {
+			display: inline-block;
+			vertical-align: middle;
+			margin-left: 28px;
+			margin-right: 28px;
+			line-height: 1.70;
+			position: relative;
+			z-index: 10;
+		}
+		&:before {
+			content: "";
+			display: block;
+			background-color: #c7f7ff;
+			position: absolute;
+			width: 102px;
+			height: 54px;
+			bottom: 28px;
+			left: 16px;
+			border-radius: 0px 0px 0px 100%;
+			transform: rotate(-75deg) skew(30deg, 15deg);
+			z-index: 1;
+		}
+	}
+}
+
+.fancybox {
+	&-close {
+		background-color: @pink-color;
+		width: 40px;
+		height: 40px;
+		border-radius: 0px;
+		top: 0px;
+		right: 0px;
+		&:after,
+		&:before {
+			content: "";
+			display: block;
+			background-color: white;
+			width: 17px;
+			height: 4px;
+			position: absolute;
+		}
+		&:before {
+			transform: rotate(-45deg);
+			top: 18px;
+			left: 12px;
+		}
+		&:after {
+			transform: rotate(+45deg);
+			top: 18px;
+			left: 12px;
+		}
+	}
+	&-skin {
+		background-color: white;
+		border-radius: 0px;
+		padding: 45px 65px 65px;
+	}
+	&-overlay {
+		background-color: rgba(17, 34, 51, 0.70);
 	}
 }
