--- a/source/stylesheets/pages/header/header.less
+++ b/source/stylesheets/pages/header/header.less
@@ -3,13 +3,31 @@
 	position: relative;
 	
 	.svg-outlink-logo {
-		background: url("../images/svg-sprites/outlink-logo.svg") no-repeat 50% 50%;
-		background-size: cover;
+		background: transparent;
 		height: 290px;
 		width: 298px;
 		&:before {
 			content: "";
 			display: block;
+			position: absolute;
+			height: 100px;
+			width: 180px;
+			top: 100px;
+			left: 50%;
+			margin-left: -90px;
+			border-radius: 50%;
+			box-shadow: 0px 0px 200px 120px rgba(255,255,255,0.45);
+			z-index: 1;
+		}
+		&:after {
+			content: "";
+			display: block;
+			position: relative;
+			background: url("../images/svg-sprites/outlink-logo.svg") no-repeat 50% 50%;
+			background-size: cover;
+			height: 290px;
+			width: 298px;
+			z-index: 10; 
 		}
 	}
 	
