--- a/source/stylesheets/pages/_variables.less
+++ b/source/stylesheets/pages/_variables.less
@@ -18,6 +18,7 @@
 @text-input-color:    #112233;
 
 @footer-color:        #1d748c;
+@footer-bg-color:     #f7f7f7;
 
 /* 5 Columns Maket
    ========================================================================== */
