--- a/source/templates/pages/guideline.html
+++ b/source/templates/pages/guideline.html
@@ -4,7 +4,7 @@ title: Главная страница
 name: guideline
 ---
 
-<div class="page">
+<div class="page page--dark">
 	
 	<div class="row p-t-20 p-b-10 relative z-index-10">
 		
