--- a/source/stylesheets/pages/page/page.less
+++ b/source/stylesheets/pages/page/page.less
@@ -1,17 +1,15 @@
 
-
-
 .page {
 	min-height: 100%;
-	background: @green-bg;
 	position: relative;
-	border-width: 20px 20px;
-	border-style: solid;
-	border-color: #fff;
-	padding-left: 50px;
-	padding-right: 50px;
-	box-shadow: inset 0px -20px 250px 50px rgba(11,135,170,1.0);
 	&--dark {
+		background: @green-bg;
+		border-width: 20px 20px;
+		border-style: solid;
+		border-color: #fff;
+		padding-left: 50px;
+		padding-right: 50px;
+		box-shadow: inset 0px -20px 250px 50px rgba(11,135,170,1.0);
 		a {
 			color: @text-white;
 		}
@@ -20,6 +18,60 @@
 			&,
 			& a {
 				color: @text-light-green;
+			}
+		}
+		&:before {
+			background: transparent url(../images/bg-horizontal.png) repeat 50% 50px;
+		}
+		&:after {
+			background: transparent url(../images/bg-vertical.png) repeat 50% 50px;
+		}
+		&__bg {
+			position: absolute;
+			height: 50%;
+			left: 0px;
+			right: 0px;
+			&:nth-child(1) {
+				background-image: linear-gradient(180deg, rgba(109,186,199,0.1), rgba(109,186,199,0.1));
+				top: 0px;
+			}
+			&:nth-child(2) {
+				background-image: linear-gradient(180deg, rgba(109,186,199,0.1), rgba(109,186,199,0.7));
+				bottom: 0px;
+			}
+		}
+		.header {
+			padding-top: 45px;
+			&>.container {
+				width: auto;
+			}
+		}
+		.footer {
+			background-color: @footer-color;
+			&>.container {
+				width: auto;
+			}
+		}
+	}
+	&--light {
+		overflow-x: hidden;
+		color: #123;
+		.header {
+			background-image: linear-gradient(180deg, rgba(77,154,175,1.0), rgba(97,172,188,1.0));
+			padding: 20px 30px 15px;
+			&,
+			& a {
+				color: @text-white;
+			}
+		}
+		.footer {
+			background-color: @footer-bg-color;
+			font-size: 11px;
+			padding-left: 30px;
+			padding-right: 30px;
+			&,
+			& a {
+				color: #789;
 			}
 		}
 	}
@@ -34,28 +86,9 @@
 		bottom: 0px;
 		left: 0px;		
 	}
-	&:before {
-		background: transparent url(../images/bg-horizontal.png) repeat 50% 50px;
-	}
-	&:after {
-		background: transparent url(../images/bg-vertical.png) repeat 50% 50px;
-	}
-	&__bg {
-		position: absolute;
-		height: 50%;
-		left: 0px;
-		right: 0px;
-		&:nth-child(1) {
-			background-image: linear-gradient(180deg, rgba(109,186,199,0.1), rgba(109,186,199,0.1));
-			top: 0px;
-		}
-		&:nth-child(2) {
-			background-image: linear-gradient(180deg, rgba(109,186,199,0.1), rgba(109,186,199,0.7));
-			bottom: 0px;
-		}
-	}
 	&__content {
 		position: relative;
 		z-index: 1;
 	}
 }
+
