--- a/source/templates/partials/footer.html
+++ b/source/templates/partials/footer.html
@@ -1,28 +1,34 @@
 
 <footer class="footer">
-	<div class="row">
-		<div class="col-xs-24">
-			<p>
-			&copy; 2010-2015
-			<br />
-			Все права защищены. Outlink.ru
-			</p>
-		</div>
-		<div class="col-xs-24">
-			
-			<div class="media pull-right">
-				<div class="media-left">
-					<i class="icons icons--spacebox-logo"></i>
-				</div>
-				<div class="media-body width-auto">
-					<p>
-						Разработка сайта
-						<br />
-						<a href="http://www.spacebox.ru/"><span class="decorate">Spacebox</span></a>
-					</p>
-				</div>
+	
+	<div class="container">
+	
+		<div class="row">
+			<div class="col-xs-24">
+				<p>
+				&copy; 2010-2015
+				<br />
+				Все права защищены. Outlink.ru
+				</p>
 			</div>
-			
+			<div class="col-xs-24">
+				
+				<div class="media pull-right">
+					<div class="media-left">
+						<i class="icons icons--spacebox-logo"></i>
+					</div>
+					<div class="media-body width-auto">
+						<p>
+							Разработка сайта
+							<br />
+							<a href="http://www.spacebox.ru/"><span class="decorate">Spacebox</span></a>
+						</p>
+					</div>
+				</div>
+				
+			</div>
 		</div>
+	
 	</div>
+	
 </footer>
