--- a/source/templates/partials/header.html
+++ b/source/templates/partials/header.html
@@ -1,5 +1,5 @@
 
-<header class="header p-t-45">
+<header class="header">
 
 	<i class="icons icons--element-1"></i>
 	<i class="icons icons--element-2"></i>
