--- a/source/stylesheets/pages/_forms.less
+++ b/source/stylesheets/pages/_forms.less
@@ -48,6 +48,29 @@
 			box-shadow: none;
 		}
 	}
+	&--green {
+		background-image: linear-gradient(180deg, rgba(107,185,204,1.0), rgba(71,168,191,1.0));
+		border-width: 0px 0px 2px;
+		border-style: solid;
+		border-color: #2295b0;
+		font-size: 18px;
+		font-weight: 700;
+		border-radius: 2px;
+		padding: 20px 27px 19px; 
+		&,
+		&:hover,
+		&:focus,
+		&:active {
+			color: @text-white;
+		}
+		&:hover {
+			background-image: linear-gradient(180deg, lighten( rgba(107,185,204,1.0), 5% ), lighten( rgba(71,168,191,1.0), 5% ));
+		}
+		&:active {
+			background-image: linear-gradient(180deg, rgba(71,168,191,1.0), rgba(107,185,204,1.0));
+			border-width: 2px 0px 0px;
+		}
+	}
 	&--violet {
 		border: 0px none;
 		background-color: @violet-color;
