--- a/source/stylesheets/pages/_icons.less
+++ b/source/stylesheets/pages/_icons.less
@@ -54,6 +54,30 @@
 		}
 	}
 	
+	&--arrow-left {
+		&:after {
+			.sprite(@arrow-left);
+		}
+	}
+	
+	&--arrow-right {
+		&:after {
+			.sprite(@arrow-right);
+		}
+	}
+	
+	&--arrow-left-unactive {
+		&:after {
+			.sprite(@arrow-left-unactive);
+		}
+	}
+	
+	&--arrow-right-unactive {
+		&:after {
+			.sprite(@arrow-right-unactive);
+		}
+	}
+	
 	&--element-1 {
 		&:after {
 			.sprite(@element-1);
