--- a/source/stylesheets/pages/_variables.less
+++ b/source/stylesheets/pages/_variables.less
@@ -15,7 +15,10 @@
 @text-light-green:    #79d8e1;
 @text-toolight-green: #9bf1f9;
 
-@text-input-color:    #112233;
+@badge-green:         #65b7ca;
+@badge-active-green:  #556677;
+
+@text-input-color:    #123;
 
 @footer-color:        #1d748c;
 @footer-bg-color:     #f7f7f7;
