--- a/source/stylesheets/sprites/sprites.less
+++ b/source/stylesheets/sprites/sprites.less
@@ -11,28 +11,72 @@ The large array-like variables contain all information about a single icon
 At the bottom of this section, we provide information about the spritesheet itself
 @spritesheet: width height image @spritesheet-sprites;
 */
+@arrow-left-unactive-name: arrow-left-unactive;
+@arrow-left-unactive-x: 69px;
+@arrow-left-unactive-y: 166px;
+@arrow-left-unactive-offset-x: -69px;
+@arrow-left-unactive-offset-y: -166px;
+@arrow-left-unactive-width: 7px;
+@arrow-left-unactive-height: 12px;
+@arrow-left-unactive-total-width: 279px;
+@arrow-left-unactive-total-height: 182px;
+@arrow-left-unactive-image: '../images/sprites/sprite.png';
+@arrow-left-unactive: 69px 166px -69px -166px 7px 12px 279px 182px '../images/sprites/sprite.png' arrow-left-unactive;
+@arrow-left-name: arrow-left;
+@arrow-left-x: 18px;
+@arrow-left-y: 166px;
+@arrow-left-offset-x: -18px;
+@arrow-left-offset-y: -166px;
+@arrow-left-width: 7px;
+@arrow-left-height: 12px;
+@arrow-left-total-width: 279px;
+@arrow-left-total-height: 182px;
+@arrow-left-image: '../images/sprites/sprite.png';
+@arrow-left: 18px 166px -18px -166px 7px 12px 279px 182px '../images/sprites/sprite.png' arrow-left;
+@arrow-right-unactive-name: arrow-right-unactive;
+@arrow-right-unactive-x: 52px;
+@arrow-right-unactive-y: 166px;
+@arrow-right-unactive-offset-x: -52px;
+@arrow-right-unactive-offset-y: -166px;
+@arrow-right-unactive-width: 7px;
+@arrow-right-unactive-height: 12px;
+@arrow-right-unactive-total-width: 279px;
+@arrow-right-unactive-total-height: 182px;
+@arrow-right-unactive-image: '../images/sprites/sprite.png';
+@arrow-right-unactive: 52px 166px -52px -166px 7px 12px 279px 182px '../images/sprites/sprite.png' arrow-right-unactive;
+@arrow-right-name: arrow-right;
+@arrow-right-x: 35px;
+@arrow-right-y: 166px;
+@arrow-right-offset-x: -35px;
+@arrow-right-offset-y: -166px;
+@arrow-right-width: 7px;
+@arrow-right-height: 12px;
+@arrow-right-total-width: 279px;
+@arrow-right-total-height: 182px;
+@arrow-right-image: '../images/sprites/sprite.png';
+@arrow-right: 35px 166px -35px -166px 7px 12px 279px 182px '../images/sprites/sprite.png' arrow-right;
 @calendar-name: calendar;
-@calendar-x: 182px;
+@calendar-x: 153px;
 @calendar-y: 135px;
-@calendar-offset-x: -182px;
+@calendar-offset-x: -153px;
 @calendar-offset-y: -135px;
 @calendar-width: 19px;
 @calendar-height: 20px;
 @calendar-total-width: 279px;
 @calendar-total-height: 182px;
 @calendar-image: '../images/sprites/sprite.png';
-@calendar: 182px 135px -182px -135px 19px 20px 279px 182px '../images/sprites/sprite.png' calendar;
+@calendar: 153px 135px -153px -135px 19px 20px 279px 182px '../images/sprites/sprite.png' calendar;
 @clock-name: clock;
-@clock-x: 93px;
+@clock-x: 63px;
 @clock-y: 135px;
-@clock-offset-x: -93px;
+@clock-offset-x: -63px;
 @clock-offset-y: -135px;
 @clock-width: 20px;
 @clock-height: 20px;
 @clock-total-width: 279px;
 @clock-total-height: 182px;
 @clock-image: '../images/sprites/sprite.png';
-@clock: 93px 135px -93px -135px 20px 20px 279px 182px '../images/sprites/sprite.png' clock;
+@clock: 63px 135px -63px -135px 20px 20px 279px 182px '../images/sprites/sprite.png' clock;
 @element-1-name: element-1;
 @element-1-x: 236px;
 @element-1-y: 135px;
@@ -56,16 +100,16 @@ At the bottom of this section, we provide information about the spritesheet itse
 @element-10-image: '../images/sprites/sprite.png';
 @element-10: 32px 135px -32px -135px 21px 21px 279px 182px '../images/sprites/sprite.png' element-10;
 @element-11-name: element-11;
-@element-11-x: 175px;
+@element-11-x: 197px;
 @element-11-y: 102px;
-@element-11-offset-x: -175px;
+@element-11-offset-x: -197px;
 @element-11-offset-y: -102px;
 @element-11-width: 12px;
 @element-11-height: 11px;
 @element-11-total-width: 279px;
 @element-11-total-height: 182px;
 @element-11-image: '../images/sprites/sprite.png';
-@element-11: 175px 102px -175px -102px 12px 11px 279px 182px '../images/sprites/sprite.png' element-11;
+@element-11: 197px 102px -197px -102px 12px 11px 279px 182px '../images/sprites/sprite.png' element-11;
 @element-12-name: element-12;
 @element-12-x: 260px;
 @element-12-y: 135px;
@@ -155,16 +199,16 @@ At the bottom of this section, we provide information about the spritesheet itse
 @element-19-image: '../images/sprites/sprite.png';
 @element-19: 219px 102px -219px -102px 11px 11px 279px 182px '../images/sprites/sprite.png' element-19;
 @element-2-name: element-2;
-@element-2-x: 197px;
+@element-2-x: 153px;
 @element-2-y: 102px;
-@element-2-offset-x: -197px;
+@element-2-offset-x: -153px;
 @element-2-offset-y: -102px;
 @element-2-width: 12px;
 @element-2-height: 11px;
 @element-2-total-width: 279px;
 @element-2-total-height: 182px;
 @element-2-image: '../images/sprites/sprite.png';
-@element-2: 197px 102px -197px -102px 12px 11px 279px 182px '../images/sprites/sprite.png' element-2;
+@element-2: 153px 102px -153px -102px 12px 11px 279px 182px '../images/sprites/sprite.png' element-2;
 @element-3-name: element-3;
 @element-3-x: 68px;
 @element-3-y: 102px;
@@ -199,16 +243,16 @@ At the bottom of this section, we provide information about the spritesheet itse
 @element-5-image: '../images/sprites/sprite.png';
 @element-5: 209px 42px -209px -42px 32px 22px 279px 182px '../images/sprites/sprite.png' element-5;
 @element-6-name: element-6;
-@element-6-x: 153px;
+@element-6-x: 182px;
 @element-6-y: 135px;
-@element-6-offset-x: -153px;
+@element-6-offset-x: -182px;
 @element-6-offset-y: -135px;
 @element-6-width: 19px;
 @element-6-height: 20px;
 @element-6-total-width: 279px;
 @element-6-total-height: 182px;
 @element-6-image: '../images/sprites/sprite.png';
-@element-6: 153px 135px -153px -135px 19px 20px 279px 182px '../images/sprites/sprite.png' element-6;
+@element-6: 182px 135px -182px -135px 19px 20px 279px 182px '../images/sprites/sprite.png' element-6;
 @element-7-name: element-7;
 @element-7-x: 0px;
 @element-7-y: 166px;
@@ -221,16 +265,16 @@ At the bottom of this section, we provide information about the spritesheet itse
 @element-7-image: '../images/sprites/sprite.png';
 @element-7: 0px 166px 0px -166px 8px 16px 279px 182px '../images/sprites/sprite.png' element-7;
 @element-8-name: element-8;
-@element-8-x: 153px;
+@element-8-x: 175px;
 @element-8-y: 102px;
-@element-8-offset-x: -153px;
+@element-8-offset-x: -175px;
 @element-8-offset-y: -102px;
 @element-8-width: 12px;
 @element-8-height: 11px;
 @element-8-total-width: 279px;
 @element-8-total-height: 182px;
 @element-8-image: '../images/sprites/sprite.png';
-@element-8: 153px 102px -153px -102px 12px 11px 279px 182px '../images/sprites/sprite.png' element-8;
+@element-8: 175px 102px -175px -102px 12px 11px 279px 182px '../images/sprites/sprite.png' element-8;
 @element-9-name: element-9;
 @element-9-x: 95px;
 @element-9-y: 102px;
@@ -243,27 +287,27 @@ At the bottom of this section, we provide information about the spritesheet itse
 @element-9-image: '../images/sprites/sprite.png';
 @element-9: 95px 102px -95px -102px 21px 13px 279px 182px '../images/sprites/sprite.png' element-9;
 @help-name: help;
-@help-x: 123px;
+@help-x: 93px;
 @help-y: 135px;
-@help-offset-x: -123px;
+@help-offset-x: -93px;
 @help-offset-y: -135px;
 @help-width: 20px;
 @help-height: 20px;
 @help-total-width: 279px;
 @help-total-height: 182px;
 @help-image: '../images/sprites/sprite.png';
-@help: 123px 135px -123px -135px 20px 20px 279px 182px '../images/sprites/sprite.png' help;
+@help: 93px 135px -93px -135px 20px 20px 279px 182px '../images/sprites/sprite.png' help;
 @info-name: info;
-@info-x: 63px;
+@info-x: 123px;
 @info-y: 135px;
-@info-offset-x: -63px;
+@info-offset-x: -123px;
 @info-offset-y: -135px;
 @info-width: 20px;
 @info-height: 20px;
 @info-total-width: 279px;
 @info-total-height: 182px;
 @info-image: '../images/sprites/sprite.png';
-@info: 63px 135px -63px -135px 20px 20px 279px 182px '../images/sprites/sprite.png' info;
+@info: 123px 135px -123px -135px 20px 20px 279px 182px '../images/sprites/sprite.png' info;
 @outlink-logo-name: outlink-logo;
 @outlink-logo-x: 101px;
 @outlink-logo-y: 0px;
@@ -300,7 +344,7 @@ At the bottom of this section, we provide information about the spritesheet itse
 @spritesheet-width: 279px;
 @spritesheet-height: 182px;
 @spritesheet-image: '../images/sprites/sprite.png';
-@spritesheet-sprites: @calendar @clock @element-1 @element-10 @element-11 @element-12 @element-13 @element-14 @element-15 @element-16 @element-17 @element-18 @element-19 @element-2 @element-3 @element-4 @element-5 @element-6 @element-7 @element-8 @element-9 @help @info @outlink-logo @pages @spacebox-logo;
+@spritesheet-sprites: @arrow-left-unactive @arrow-left @arrow-right-unactive @arrow-right @calendar @clock @element-1 @element-10 @element-11 @element-12 @element-13 @element-14 @element-15 @element-16 @element-17 @element-18 @element-19 @element-2 @element-3 @element-4 @element-5 @element-6 @element-7 @element-8 @element-9 @help @info @outlink-logo @pages @spacebox-logo;
 @spritesheet: 279px 182px '../images/sprites/sprite.png' @spritesheet-sprites;
 
 /*
