--- a/source/templates/layouts/default-page-light.html
+++ b/source/templates/layouts/default-page-light.html
@@ -22,7 +22,7 @@
 		
 		<span class="page__bg"></span><span class="page__bg"></span>
 		
-		<div class="page page--light"><div class="page__content">
+		<div class="page page--light"><div class="page__content p-b-85">
 			
 			{{> header-light }}
 			
