--- a/source/templates/layouts/default.html
+++ b/source/templates/layouts/default.html
@@ -20,7 +20,7 @@
 	</head>
 	<body>
 		<span class="page__bg"></span><span class="page__bg"></span>
-		<div class="page page--dark"><div class="page__content">
+		<div class="page page--dark"><div class="page__content p-b-85">
 			{{> header }}
 			
 			<div class="container">
