--- a/source/templates/pages/index.html
+++ b/source/templates/pages/index.html
@@ -53,7 +53,7 @@ name: index
 						</div>
 						<div class="col-xs-9 p-l-0">
 							
-							<a href="" class="btn btn--font-14 btn--middle btn--bold btn--violet fancybox">Подтвердить</a>
+							<a href="inner.html" class="btn btn--font-14 btn--middle btn--bold btn--violet fancybox">Подтвердить</a>
 							
 						</div>
 					</div>
