Save inner pages

--- a/source/stylesheets/app.less
+++ b/source/stylesheets/app.less
@@ -82,6 +82,8 @@
 @import "pages/main/main";
 @import "pages/page/page";
 @import "pages/inner/inner";
+@import "pages/about/about";
+@import "pages/help/help";
 
 @import "pages/_forms";
 
