--- a/source/stylesheets/pages/_typo.less
+++ b/source/stylesheets/pages/_typo.less
@@ -83,3 +83,11 @@ body {
 p {
 	margin: 0px 0px 20px;
 }
+a {
+	color: @text-green;
+	text-decoration: underline;
+	&:hover {
+		color: @text-green;
+		text-decoration: none;
+	}
+}
