--- a/source/templates/pages/inner.html
+++ b/source/templates/pages/inner.html
@@ -1,7 +1,7 @@
 ---
 layout: default-page-light.html
-title: Главная страница
-name: index
+title: Отчет для rsl.ru
+name: inner
 ---
 
 <div class="line p-t-70 p-b-30">
