--- a/source/templates/partials/header.html
+++ b/source/templates/partials/header.html
@@ -39,10 +39,10 @@
 
 			<div class="row nowrap text-right">
 				<div class="col-xs-24">
-					<a class="header__link" href=""><i class="icons icons--help"></i><span class="decorate">Помощь</span></a>
+					<a class="header__link" href="help.html"><i class="icons icons--help"></i><span class="decorate">Помощь</span></a>
 				</div>
 				<div class="col-xs-24">
-					<a class="header__link" href=""><i class="icons icons--info"></i><span class="decorate">О проекте</span></a>
+					<a class="header__link" href="about.html"><i class="icons icons--info"></i><span class="decorate">О проекте</span></a>
 				</div>
 			</div>
 			
