--- a/source/templates/partials/header-light.html
+++ b/source/templates/partials/header-light.html
@@ -11,14 +11,14 @@
 				</a>
 
 			</div>
-			<div class="col-xs-24">
+			<div class="col-xs-24 p-r-45">
 
 				<div class="row nowrap pull-right text-right">
 					<div class="col-xs-24">
-						<a class="header__link" href=""><i class="icons icons--help"></i><span class="decorate">Помощь</span></a>
+						<a class="header__link" href="help.html"><i class="icons icons--help"></i><span class="decorate">Помощь</span></a>
 					</div>
 					<div class="col-xs-24">
-						<a class="header__link" href=""><i class="icons icons--info"></i><span class="decorate">О проекте</span></a>
+						<a class="header__link" href="about.html"><i class="icons icons--info"></i><span class="decorate">О проекте</span></a>
 					</div>
 				</div>
 				
