--- a/source/stylesheets/app.less
+++ b/source/stylesheets/app.less
@@ -1,4 +1,6 @@
 
+@import (inline) "vendor/rainbow/themes/github.css";
+
 // Core variables and mixins
 @import "../../bower_components/bootstrap/less/variables.less";
 @import "vendor/jquery.fancybox.less";
