--- a/source/templates/partials/footer-js.html
+++ b/source/templates/partials/footer-js.html
@@ -1,3 +1,5 @@
 		
 <script src="javascripts/libs.min.js"></script>
+
 <script src="javascripts/app.min.js"></script>
+<script src="javascripts/rainbow.js"></script>
