--- a/source/templates/partials/header-light.html
+++ b/source/templates/partials/header-light.html
@@ -6,7 +6,7 @@
 		<div class="row">
 			<div class="col-xs-24">
 				
-				<a class="header__logotpe m-l-30" href="">
+				<a class="header__logotpe m-l-30" href="index.html">
 					<i class="icons icons--outlink-logo"></i>
 				</a>
 
