--- a/source/stylesheets/pages/_typo.less
+++ b/source/stylesheets/pages/_typo.less
@@ -28,6 +28,7 @@
 body {
 	position: relative;
     color: white;
+	line-height: 1.6;
 }
 body,
 input,
@@ -53,22 +54,30 @@ h1,h2,h3,h4,h5,h6,
 h1,
 .h1 {
     font-size: 40px;
+	font-weight: 900;
 }
 h2,
 .h2 {
     font-size: 30px;
+	font-weight: 700;
+	line-height: 1.35;
+	margin-bottom: 19px;
 }
 h3,
 .h3 {
     font-size: 26px;
+	line-height: 1.35;
 }
 h4,
 .h4 {
     font-size: 24px;
+	line-height: 1.35;
 }
 h5,
 .h5 {
     font-size: 20px;
+	line-height: 1.5;
+	margin-bottom: 8px;
 }
 h6,
 .h6 {
@@ -81,7 +90,8 @@ body {
 	min-height: 100%;
 }
 p {
-	margin: 0px 0px 20px;
+	font-size: 16px;
+	margin: 0px 0px 22px;
 }
 a {
 	color: @text-green;
