--- a/source/stylesheets/pages/total.less
+++ b/source/stylesheets/pages/total.less
@@ -29,16 +29,6 @@
 }
 .loopingClas(@iterations);
 
-
-
-
-
-
-
-
-
-
-
 .relative {
 	position: relative!important;
 }
@@ -142,4 +132,13 @@ table {
 	td {
 		padding: 5px 10px;
 	}
+}
+pre {
+	background-color: #f5fafc;
+	padding: 18px 20px;
+	margin: -4px 0px 16px;
+	border-radius: 0px;
+	border: 0px none;
+	font-size: 14px;
+	color: #345;
 }
