--- a/source/templates/partials/header.html
+++ b/source/templates/partials/header.html
@@ -25,7 +25,7 @@
 	<div class="row">
 		<div class="col-xs-12 p-t-10">
 			
-			<a class="header__logotpe" href="">
+			<a class="header__logotpe" href="index.html">
 				<i class="icons icons--outlink-logo"></i>
 			</a>
 
