--- a/source/templates/pages/index.html
+++ b/source/templates/pages/index.html
@@ -48,7 +48,7 @@ name: index
 					<div class="row">
 						<div class="col-xs-39 p-r-0">
 							
-							<input class="form-control form-control--middle" type="text" placeholder="Ваша электронная почта..." />
+							<input class="form-control form-control--yellow form-control--brnone form-control--middle" type="text" placeholder="Ваша электронная почта..." />
 							
 						</div>
 						<div class="col-xs-9 p-l-0">
