--- a/source/stylesheets/pages/_forms.less
+++ b/source/stylesheets/pages/_forms.less
@@ -1,4 +1,5 @@
 
+
 .form {
 	max-width: 710px;
 	margin: auto;
@@ -98,15 +99,32 @@ a.btn {
 		}
 	}
 }
+textarea.form-control {
+	min-height: 120px;
+}
 .form-control {
 	padding: 5px 15px 5px 15px;
+	border-radius: 0px;
+	border: 0px none;
 	&--middle {
-		border-radius: 0px;
-		border: 0px none;
 		color: @text-input-color;
 		height: 40px;
 	}
-
+	&--small {
+		color: @text-input-color;
+		font-size: 14px;
+		padding: 5px 10px 5px 10px;
+		height: 30px;
+	}
+	&--yellow {
+		background-color: #fffbe1;
+		border-width: 1px 1px 1px 1px;
+		border-style: solid;
+		border-color: #d7d7d7;
+	}
+	&--brnone {
+		border-right-width: 0px;
+	}
 }
 .form-control::placeholder {
 	color:    @text-input-color;;
