--- a/source/stylesheets/pages/header/header.less
+++ b/source/stylesheets/pages/header/header.less
@@ -54,6 +54,7 @@
 			left: 0px;
 		}
 	}
+	/*
 	i {
 		position: absolute;
 		&.icons {
@@ -143,4 +144,22 @@
 			}
 		}
 	}
+	*/
+}
+
+.chart-right,
+.chart-left {
+	position: absolute;
+	width: 400px;
+	height: 350px;
+	top: 0px;
+	left: 50%;
+	z-index: 333;
+}
+
+.chart-left {
+	margin-left: -500px;
+}
+.chart-right {
+	margin-left: 100px;
 }
