--- a/source/templates/partials/header.html
+++ b/source/templates/partials/header.html
@@ -1,6 +1,11 @@
 
 <header class="header">
-
+	
+	<div id="chartLeft" class="chart-left"></div>
+	
+	<div id="chartRight" class="chart-right"></div>
+	
+	<!--
 	<i class="icons icons--element-1"></i>
 	<i class="icons icons--element-2"></i>
 	<i class="icons icons--element-3"></i>
@@ -21,7 +26,8 @@
 	<i class="icons icons--element-17"></i>
 	<i class="icons icons--element-18"></i>
 	<i class="icons icons--element-19"></i>
-
+	-->
+	
 	<div class="row">
 		<div class="col-xs-12 p-t-10">
 			
