--- a/source/templates/pages/index.html
+++ b/source/templates/pages/index.html
@@ -64,7 +64,7 @@ name: index
 	</div>
 </div>
 
-<div class="services">
+<div class="services m-b-30">
 	<div class="row">
 		<div class="col-xs-14">
 			<div class="services__item">
