Add class "error" to form, fix changes design

--- a/source/stylesheets/pages/_forms.less
+++ b/source/stylesheets/pages/_forms.less
@@ -125,6 +125,10 @@ textarea.form-control {
 	&--brnone {
 		border-right-width: 0px;
 	}
+	&.error {
+		border-color: #ff2b5a;
+		background-color: rgb(253,209,209);
+	}
 }
 .form-control::placeholder {
 	color:    @text-input-color;;
