--- a/source/stylesheets/pages/header/header.less
+++ b/source/stylesheets/pages/header/header.less
@@ -33,6 +33,8 @@
 	
 	&__link {
 		line-height: 1.0;
+		position: relative;
+		z-index: 999;
 		.icons {
 			margin-right: 15px;
 		}
@@ -158,8 +160,8 @@
 }
 
 .chart-left {
-	margin-left: -500px;
+	margin-left: -400px;
 }
 .chart-right {
-	margin-left: 100px;
+	margin-left: 0px;
 }
