--- a/source/stylesheets/pages/page/page.less
+++ b/source/stylesheets/pages/page/page.less
@@ -4,9 +4,7 @@
 	position: relative;
 	&--dark {
 		background: @green-bg;
-		border-width: 20px 20px;
-		border-style: solid;
-		border-color: #fff;
+		border: 0px none;
 		padding-left: 50px;
 		padding-right: 50px;
 		box-shadow: inset 0px -20px 250px 50px rgba(11,135,170,1.0);
@@ -15,6 +13,11 @@
 		}
 		.footer {
 			font-size: 11px;
+			.container {
+				max-width: 1180px;
+				margin-left: auto;
+				margin-right: auto;
+			}
 			&,
 			& a {
 				color: @text-light-green;
@@ -42,6 +45,9 @@
 		}
 		.header {
 			padding-top: 44px;
+			max-width: 1180px;
+			margin-left: auto;
+			margin-right: auto;
 			&>.container {
 				width: auto;
 			}
