Save list style

--- a/source/templates/pages/help.html
+++ b/source/templates/pages/help.html
@@ -89,6 +89,20 @@ name: help
 			Это на самом деле очень выгодно, так как многие начинающие вебмастеры и оптимизаторы, не задумываются о том, что такие могут присутствовать на их сайте. Есть и такие оптимизаторы, которые сами забывают закрыть их от индексации. А ведь из-за этого, опытные оптимизаторы не захотят покупать у вас постовые. Так же, это очень негативно влияет на внутреннюю оптимизацию сайта Сейчас я опишу, как убрать ссылки из часто задаваемых вопросов на форумах.
 		</p>
 		
+		<ul>
+			<li>Друг владельца сайта-донора попросил разместить ссылку или баннер, ведущие на его ресурс.</li>
+			<li>Партнер владельца сайта-донора попросил разместить ссылку на его сайт.</li>
+			<li>Владелец сайта-донора поставил счетчик посещений</li>
+			<li>Владелец сайта-донора просто поставил линк на сайт, который ему просто пришелся по душе</li>
+			<li>Владелец сайта разместил ссылку на ресурс поставщика за скидку на его товары или услуги.</li>
+			<li>Владелец сайта-донора взяла на работу администратора и он начал ставить исходящие ссылки.</li>
+			<li>Нанятый администратор начал продавать линки с сайта-донора, возможно без разрешения владельца.</li>
+			<li>Владелец сайта привлек оптимизаторов, которые начали ставить или продавать линки на ресурсе.</li>
+			<li>На сайте-доноре был организован не модерируемый чат/форум, а недобросовестные пользователи начали ставить ссылки на сторонние ресурсы в постах и комментариях.</li>
+			<li>На сайте была размещена доска объявлений, а недобросовестные пользователи начали ставить ссылки на другие ресурсы.</li>
+			<li>Хакеры взломали систему управления сайта-донора, и разместили вредоносный код с исходящими линками.</li>
+		</ul>		
+		
 		<h5>
 			Скрыть ссылки от индексации
 		</h5>
