--- a/source/stylesheets/pages/total.less
+++ b/source/stylesheets/pages/total.less
@@ -89,12 +89,21 @@ a:active:focus,button:active:focus {
 	}
 }
 ul {
-	padding-left: 18px;
-	font-size: 15px;
+	padding: 0px 0px 0px 20px;
+	margin: 0px 0px 20px 0px;
+	font-size: 16px;
 	li {
 		list-style-type: none;
 		position: relative;
 		margin-top: 6px;
+		padding: 0px 0px 0px 20px;
+		position: relative;
+		&:before {
+			content: "\2014";
+			font-size: 14px;
+			position: absolute;
+			left: 0px;
+		}
 		&:after {
 			content: "";
 			display: block;
